Zwischenstand. Korrekturen..